# OOP

./: CMakeLists.txt  README.md  RNA.cpp  RNA.h
Tests/: RNA.h  test.cpp
